--- a/front-end/src/Style.css
+++ b/front-end/src/Style.css
@@ -22,6 +22,13 @@ h4 {
 
 input {
   margin-left: 10px;
+  margin-top: 10px;
+}
+
+.smallInput {
+  height: 15px;
+  width: 30px;
+  margin-right: 10px;
 }
 
 /* CLASS NAME CONTENT */
