Select workout and select meal plan both return an array

--- a/front-end/src/Style.css
+++ b/front-end/src/Style.css
@@ -109,6 +109,10 @@ input {
   flex: 3;
 }
 
+.currentPlan {
+  text-decoration: underline;
+}
+
 /* FITNESS LOG */
 .breakfast {
   text-align: left;
