Fixed logo size

--- a/front-end/src/Style.css
+++ b/front-end/src/Style.css
@@ -84,7 +84,10 @@ input {
 
 /* GREETING PAGE */
 .logo {
-  justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   flex: 2.5;
 }
 
