--- a/front-end/src/Style.css
+++ b/front-end/src/Style.css
@@ -67,6 +67,13 @@ input {
   justify-content: space-evenly;
 }
 
+.headerRow {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+}
+
 .col {
   display: flex;
   flex-direction: column;
@@ -100,6 +107,13 @@ input {
 }
 
 /* HOME */
+
+.logoImage {
+  padding-top: 2.5%;
+  width: 32px;
+  height: 32px;
+}
+
 .nutritionBank {
   flex: 2;
 }
@@ -173,6 +187,9 @@ input {
   height: 10vh;
 }
 
+.planLink {
+  text-decoration: none;
+}
 
 /* CREATE WORKOUT PLAN */
 .dayBox {
@@ -184,8 +201,6 @@ input {
   text-align: left;
   margin-bottom: 80px;
 }
-
-
 
 /* NAVIGATION */
 .navbar {
