--- a/front-end/src/Style.css
+++ b/front-end/src/Style.css
@@ -181,10 +181,28 @@ input {
   border: solid black;
   border-radius: 8px;
   width: 40vh;
+  text-decoration: none;
+}
+
+.planBox > hr {
+  margin-top: 0;
+}
+
+.planBox > h2 {
+  font-style: inherit;
+  color: black;
 }
 
 .imageBox {
-  height: 10vh;
+  height: 20vh;
+  overflow: hidden;
+  margin: 0;
+}
+
+.planImage {
+  height: 20vh;
+  width: 400px;
+  object-fit: cover
 }
 
 .planLink {
