--- a/front-end/src/Style.css
+++ b/front-end/src/Style.css
@@ -32,7 +32,7 @@ h4 {
 
 input {
   margin-left: 10px;
-  margin-top: 10px;
+  margin-top: 5px;
 }
 
 .smallInput {
@@ -82,6 +82,11 @@ input {
   flex-direction: row;
   justify-content: center;
   align-content: center;
+}
+
+.alignLeft {
+  justify-content: left;
+  align-items: center;
 }
 
 .col {
