Reworked the entire User data storage and converted it to session storage  / Users can create work out plans and post them to the database

--- a/front-end/src/Style.css
+++ b/front-end/src/Style.css
@@ -270,6 +270,19 @@ input {
   color: #29abe2;
 }
 
+.workoutInfo {
+  text-align: left;
+  max-width: 10vh;
+  min-width: 10vh;
+  height: auto;
+}
+
+.planRow {
+  display: flex;
+  justify-content: space-evenly;
+  padding-bottom: 12px;
+}
+
 /* NAVIGATION */
 .navbar {
   display: flex;
