--- a/front-end/src/Style.css
+++ b/front-end/src/Style.css
@@ -74,8 +74,9 @@ input {
 .row { 
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
+  padding: 0px 20px;
 }
 
 .headerRow {
