--- a/front-end/src/Style.css
+++ b/front-end/src/Style.css
@@ -1,5 +1,7 @@
 html{
   margin: 0;
+  /* max-width: 375px;
+  min-width: 375px; */
 }
 
 /* COLORS */
@@ -323,6 +325,35 @@ input {
   width: 100%;
 }
 
+/* SIDEBAR */
+.sideBar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.userContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 90vh;
+  width: 100%;
+}
+
+.logOut {
+  display: flex;
+  flex-direction: row;
+  height: 6vh;
+  width: 100%;
+  align-content: flex-start;
+}
+
+.siderBar > div.flexbox{
+  width: 0;
+  height: 0;
+}
+
 /* ID CONTENT */
 #border {
   display: flex;
@@ -345,4 +376,90 @@ input {
   align-items: center;
   width: 100%;
   margin: 18% 0px;
+}
+
+/* SIDE BAR */
+.bm-burger-button {
+  position: fixed;
+  width: 26px;
+  height: 20px;
+  left: 12px;
+  top: 12px;
+}
+
+/* Color/shape of burger icon bars */
+.bm-burger-bars {
+  background: #373a47;
+}
+
+/* Color/shape of burger icon bars on hover*/
+.bm-burger-bars-hover {
+  background: #a90000;
+}
+
+/* Position and sizing of clickable cross button */
+/* .bm-cross-button {
+  height: 24px;
+  width: 24px;
+} */
+
+/* Color/shape of close button cross */
+/* .bm-cross {
+  background: #bdc3c7;
+} */
+
+/*
+Sidebar wrapper styles
+Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
+*/
+.bm-menu-wrap {
+  position: fixed;
+  left: 0;
+  top: 0;
+}
+
+/* General sidebar styles */
+.bm-menu {
+  background: #373a47;
+  font-size: 1.15em;
+}
+
+/* Morph shape necessary with bubble or elastic */
+.bm-morph-shape {
+  fill: #373a47;
+}
+
+/* Wrapper for item list */
+.bm-item-list {
+  color: #b8b7ad;
+  padding: 0.8em;
+  border: none;
+}
+
+/* Individual item */
+.bm-item {
+  display: inline-block;
+  border: none;
+}
+
+/* Styling of overlay */
+.bm-overlay {
+  position: fixed;
+  top: 0;
+  background: rgba(0, 0, 0, 0.3);
+}
+
+/* Individual item */
+.bm-item {
+  display: inline-block;
+  color: #d1d1d1;
+  border: none;
+  margin-bottom: 10px;
+  text-align: left;
+  text-decoration: none;
+  transition: color 0.2s;
+}
+
+.bm-item:hover {
+  color: #ffffff;
 }
