--- a/front-end/src/Style.css
+++ b/front-end/src/Style.css
@@ -4,6 +4,10 @@ html{
   min-width: 375px; */
 }
 
+body {
+  /* background-color: #373a47; */
+}
+
 /* COLORS */
 /* #29abe2 */
 /* #0071bc */
@@ -46,6 +50,11 @@ input {
 /* CLASS NAME CONTENT */
 .header {
   text-align: center;
+  background-color: #ffffff;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
 }
 
 .flexbox {
@@ -57,6 +66,7 @@ input {
 .content {
   display: flex;
   flex: 20;
+  padding-top: 10%;
   align-items: center;
   justify-content: space-evenly;
   text-align: center;
@@ -206,6 +216,7 @@ input {
 
 .searchbox {
   margin: 20px 0px;
+  padding-top: 15%;
 }
 
 .mealName {
@@ -222,7 +233,11 @@ input {
   max-width: 10vh;
   min-width: 10vh;
 }
+
 /* ADD EXERCISE */
+.addExercise {
+  padding-top: 20%;
+}
 
 /* MEAL / WORKOUT HOME */
 
@@ -320,9 +335,11 @@ input {
   bottom: 0;
   position: fixed;
   align-items: center;
-  background-color: rgb(200, 200, 200);
+  background-color: #373a47;
+  color: #d1d1d1;
   height: 50px;
   width: 100%;
+  text-transform: uppercase;
 }
 
 /* SIDEBAR */
@@ -337,7 +354,7 @@ input {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 90vh;
+  height: 84vh;
   width: 100%;
 }
 
