--- a/front-end/src/Style.css
+++ b/front-end/src/Style.css
@@ -138,7 +138,7 @@ input {
   border-color: #515050;
   border: 2px 2px;
   background-color: #fff;
-  color: #515050;
+  color: #333;
 }
 
 .border-black:hover {
@@ -267,7 +267,7 @@ input {
 }
 
 .currentPlan {
-  text-decoration: underline;
+  /* text-decoration: underline; */
   font-size: 24px;
   color: #29abe2;
 }
@@ -420,7 +420,7 @@ input {
 
 /* CURRENT MEAL / WORKOUT PLAN */
 .planTitle {
-  text-decoration: underline;
+  /* text-decoration: underline; */
   color: #29abe2;
 }
 
