--- a/front-end/src/Style.css
+++ b/front-end/src/Style.css
@@ -2,10 +2,12 @@ html{
   margin: 0;
   /* max-width: 375px;
   min-width: 375px; */
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
   background-color: #e7ebf1;
+  font-family: 'Roboto', sans-serif;
 }
 
 /* COLORS */
